--- a/en/01.3.md
+++ b/en/01.3.md
@@ -2,7 +2,7 @@
 
 The primary tool programmers use to write software is a text editor. Text editors are similar to word processing programs (Microsoft Word, Open Office, …) but unlike such programs they don't do any formatting, (No bold, italic, …) instead they operate only on plain text. Both OSX and Windows come with text editors but they are highly limited and I recommend installing a better one.
 
-To make the installation of this software easier an installer is available at the book's website: http://www.golang-book.com/. This installer will install the Go tool suite, setup environmental variables and install a text editor.
+To make the installation of this software easier an installer is available at the book's website: [http://www.golang-book.com](http://www.golang-book.com). This installer will install the Go tool suite, setup environmental variables and install a text editor.
 
 ###Windows
 
@@ -18,11 +18,11 @@ As you work in a text editor it is useful to learn keyboard shortcuts. The menus
 
 * Ctrl + S – save the current file
 * Ctrl + X – cut the currently selected text (remove it and put it in your clipboard so it can be pasted later)
-*  Ctrl + C – copy the currently selected text
-*  Ctrl + V – paste the text currently in the clipboard
-*  Use the arrow keys to navigate, Home to go to the beginning of the line and End to go to the end of the line
-*  Hold down shift while using the arrow keys (or Home and End) to select text without using the mouse
-*  Ctrl + F – brings up a find in file dialog that you can use to search the contents of a file
+* Ctrl + C – copy the currently selected text
+* Ctrl + V – paste the text currently in the clipboard
+* Use the arrow keys to navigate, Home to go to the beginning of the line and End to go to the end of the line
+* Hold down shift while using the arrow keys (or Home and End) to select text without using the mouse
+* Ctrl + F – brings up a find in file dialog that you can use to search the contents of a file
 
 ###OSX
 
@@ -36,5 +36,5 @@ Like Scite on Windows Text Wrangler contains a large white area where text is en
 * Command + X – cut the currently selected text (remove it and put it in your clipboard so it can be pasted later)
 * Command + C – copy the currently selected text
 * Command + V – paste the text currently in the clipboard
-*  Use the arrow keys to navigate
-*  Command + F – brings up a find in file dialog that you can use to search the contents of a file
+* Use the arrow keys to navigate
+* Command + F – brings up a find in file dialog that you can use to search the contents of a file
