--- a/en/01.2.md
+++ b/en/01.2.md
@@ -10,20 +10,21 @@ And although it might appear that most of the computing world has left behind th
 
 In Windows the terminal (also known as the command line) can be brought up by typing the windows key + r (hold down the windows key then press r), typing cmd.exe and hitting enter. You should see a black window appear that looks like this:
 
+![Terminal](../img/1-windows-ter.png)
 
 By default the command line starts in your home directory. (In my case this is C:\Users\caleb) You issue commands by typing them in and hitting enter. Try entering the command dir, which lists the contents of a directory. You should see something like this:
-
-![Terminal](../img/1-mac-ter.png)
 
     C:\Users\caleb>dir
      Volume in drive C has no label.
      Volume Serial Number is B2F5-F125
 
 Followed by a list of the files and folders contained in your home directory. You can change directories by using the command cd. For example you probably have a folder called Desktop. You can see its contents by entering cd Desktop and then entering dir. To go back to your home directory you can use the special directory name .. (two periods next to each other): cd ... A single period represents the current folder (known as the working folder), so cd . doesn't do anything. There are a lot more commands you can use, but this should be enough to get you started.
-OSX
+
+###OSX
 
 In OSX the terminal can be reached by going to Finder → Applications → Utilities → Terminal. You should see a window like this:
 
+![Terminal](../img/1-mac-ter.png)
 
 By default the terminal starts in your home directory. (In my case this is /Users/caleb) You issue commands by typing them in and hitting enter. Try entering the command ls, which lists the contents of a directory. You should see something like this:
 
