添加pre next link

--- a/cn/01.-1.md
+++ b/cn/01.-1.md
@@ -4,3 +4,8 @@
 * 他只讲windows和mac，说明我是个屌丝，他是个高富帅，我买不起mac，只能免费的linux里面玩Go。
 * 他讲编辑器，讲的很少，选择很小，感觉唯一有用的就是他提供的两个安装包，里面集成了编辑器。如果想了解的更多，欢迎收看[go web](https://github.com/astaxie/build-web-application-with-golang/blob/master/01.4.md)
 * 希望接下来有点干货
+
+## links
+   * [目录](<preface.md>)
+   * 上一节: [Go Tools](<01.4.md>)
+   * 下一节: [hello-world](<02.0.md>)
