--- a/cn/01.1.md
+++ b/cn/01.1.md
@@ -17,3 +17,9 @@
 在 OSX 上l浏览的文件和文件夹可以使用查找程序（可通过单击查找程序图标 — — 在左边栏中较低的显示图标）：
 
 ![mac](../img/1-windows-file.png)
+
+
+## links
+   * [目录](<preface.md>)
+   * 上一节: [入门](<01.0.md>)
+   * 下一节: [终端](<01.2.md>)
