--- a/cn/01.2.md
+++ b/cn/01.2.md
@@ -34,3 +34,9 @@
      Documents    Library        Music      Public
 
 这些文件和文件夹包含在您的主目录中 （在上面情况下没有任何文件）。您可以更改目录使用 cd 命令。例如，您可能有一个名为`桌面`的文件夹。您可以通过输入 `cd 桌面`，然后键入 `ls` 看到其内容。若要返回到您的主目录可以使用特殊的目录名称`..`(彼此相邻的两个句点）： `cd .`单个句点表示当前文件夹 （称为工作文件夹），所以`cd .`不会做任何事情。有更多的命令，您可以使用，但这应该足以帮助您入门。
+
+
+## links
+   * [目录](<preface.md>)
+   * 上一节: [文件和文件夹](<01.1.md>)
+   * 下一节: [文本编辑器](<01.3.md>)
