--- a/cn/01.4.md
+++ b/cn/01.4.md
@@ -21,3 +21,9 @@ The Go tool suite is made up of several different commands and sub-commands. A l
     go help
 
 后续章节我们将看如何使用它们。
+
+
+## links
+   * [目录](<preface.md>)
+   * 上一节: [文本编辑器](<01.3.md>)
+   * 下一节: [个人总结](<01.-1.md>)
