--- a/en/01.0.md
+++ b/en/01.0.md
@@ -12,3 +12,7 @@ The process we use to write software using Go (and most programming languages) i
 * Run and test the program to make sure it works
 
 This process is iterative (meaning its done many times) and the steps usually overlap. But before we write our first program in Go there are a few prerequisite concepts we need to understand.
+
+## links
+   * [preface](<preface.md>)
+   * next: [Files and Folders](<01.1.md>)
