--- a/en/01.1.md
+++ b/en/01.1.md
@@ -17,3 +17,9 @@ On Windows files and folders can be browsed using Windows Explorer (accessible b
 On OSX files and folders can be browsed using Finder (accessible by clicking the Finder icon – the face icon in the lower left bar):
 
 ![mac](../img/1-windows-file.png)
+
+
+## links
+   * [preface](<preface.md>)
+   * pre: [Getting Started](<01.0.md>)
+   * next: [The Terminal](<01.2.md>)
