--- a/en/01.2.md
+++ b/en/01.2.md
@@ -33,3 +33,9 @@ By default the terminal starts in your home directory. (In my case this is /User
      Documents    Library        Music      Public
 
 These are the files and folders contained in your home directory (in this case there are no files). You can change directories using the cd command. For example you probably have a folder called Desktop. You can see its contents by entering cd Desktop and then entering ls. To go back to your home directory you can use the special directory name .. (two periods next to each other): cd ... A single period represents the current folder (known as the working folder), so cd . doesn't do anything. There are a lot more commands you can use, but this should be enough to get you started.
+
+
+## links
+   * [preface](<preface.md>)
+   * pre: [Files and Folders](<01.1.md>)
+   * next: [Text Editors](<01.3.md>)
