--- a/en/01.3.md
+++ b/en/01.3.md
@@ -38,3 +38,9 @@ Like Scite on Windows Text Wrangler contains a large white area where text is en
 * Command + V – paste the text currently in the clipboard
 * Use the arrow keys to navigate
 * Command + F – brings up a find in file dialog that you can use to search the contents of a file
+
+
+## links
+   * [preface](<preface.md>)
+   * pre: [The Terminal](<01.2.md>)
+   * next: [Go Tools](<01.4.md>)
