--- a/en/01.4.md
+++ b/en/01.4.md
@@ -19,3 +19,8 @@ The Go tool suite is made up of several different commands and sub-commands. A l
     go help
 
 We will see how they are used in subsequent chapters.
+
+## links
+   * [preface](<preface.md>)
+   * pre: [Text Editors](<01.3.md>)
+   * next: [hello-world](<02.0.md>)
