增加第四章的英文部分

--- a/en/04.5.md
+++ b/en/04.5.md
@@ -20,10 +20,7 @@ We use another function from the `fmt` package to read the user input (`Scanf`).
 Problems
 
  * What are two ways to create a new variable?
- * What is the value of `x` after running:
-
-    x := 5; x += 1?
-
+ * What is the value of `x` after running:`x := 5; x += 1?`
  * What is scope and how do you determine the scope of a variable in Go?
  * What is the difference between `var` and `const`?
  * Using the example program as a starting point, write a program that converts from Fahrenheit into Celsius. (`C = (F - 32) * 5/9`)
