第二章翻译一半

--- a/cn/01.-1.md
+++ b/cn/01.-1.md
@@ -8,4 +8,4 @@
 ## links
    * [目录](<preface.md>)
    * 上一节: [Go Tools](<01.4.md>)
-   * 下一节: [hello-world](<02.0.md>)
+   * 下一节: [你的第一个程序](<02.0.md>)
