--- a/cn/02.0.md
+++ b/cn/02.0.md
@@ -1,4 +1,31 @@
+## 你的第一个程序
+
+传统上您在任何编程语言编写的第一个程序都是一个"Hello World"程序 — — 这个程序只需向您的终端输出 Hello World。让我们使用Go来写一个。
+
+首先创建一个新的文件夹，我们可以在那里存储我们的程序。我们把它安置在第一章我们创建的在主目录中的`Go`文件夹内。创建一个文件夹命名为 `~/Go/src/golang-book/chapter2`。( `~` 意思是您的主目录）从终端您可以通过输入以下命令：
+
+    mkdir Go/src/golang-book
+    mkdir Go/src/golang-book/chapter2
+
+使用您的文本编辑器编辑如下：
+    package main
+
+    import "fmt"
+
+    // this is a comment
+
+    func main() {
+        fmt.Println("Hello World")
+    }
+
+请确保您的文件与上面显示的一样，把它另存于我们刚刚创建的文件夹中的 命名为`main.go`。打开一个新的终端，并输入如下：
+
+    cd Go/src/golang-book/chapter2
+    go run main.go
+
+您会看见 `Hello World` 显示在您的终端上。用 `go run` 加上后面的文件 （以空格分隔）、 将它们编译成可执行文件保存在一个临时目录中，然后运行程序。如果你没看到 `Hello World` 的打印，你可能在程序输入时犯了一个错误。编译器会帮你定位错误。像大多数编译器一样，the Go compiler is extremely pedantic and has no tolerance for mistakes. （怎么翻译？）
+
 ## links
    * [目录](<preface.md>)
-   * 上一节: [Go 命令](<01.3.md>)
+   * 上一节: [个人总结](<01.-1.md>)
    * 下一节: [hello-world](<02.0.md>)
