--- a/cn/02.1.md
+++ b/cn/02.1.md
@@ -1,4 +1,65 @@
+## How to Read a Go Program
+
+让我们来看看这个程序的更多详细信息。Go程序读取是从上到下、从左到右。（像一本书)第一行如下所示：
+
+    package main
+
+这被称为"包声明"。每个Go程序必须以包声明开头。包是Go语言组织和重用代码的方式。两种类型的Go程序： 可执行文件和库。我们可以直接从终端运行的各种可执行应用程序。（在 Windows 中他们后缀名为exe）库是把一些代码一起打包，以便我们可以在其他程序中引用。我们将在后面再详细研究库，现在只是确认我们写的任何程序都包含这一行就可以了。
+
+下一行是一个空行。计算机代表换行符的特殊字符 （或多个字符）。换行符、 空格和制表符被称为空白 （因为您不能看到它们）。Go 一般不会关心空白，我们加入空白只是让程序更易于阅读。（您可以将下面这行删除，程序会表现在完全相同的方式）
+
+然后我们看见这么一行:
+
+    import "fmt"
+
+import关键字是我们从其他的包引入到我们的程序中，为我们所用。fmt (shorthand for format)包 实现对输入和输出格式话. Given what we just learned about packages what do you think the fmt package's files would contain at the top of them?（鉴于我们刚刚了解了包的概念，你认为是不是我们把fmt包的文件引入到了我们程序的顶部？什么情况！）
+
+Notice that fmt above is surrounded by double quotes. The use of double quotes like this is known as a “string literal” which is a type of “expression”. In Go strings represent a sequence of characters (letters, numbers, symbols, …) of a definite length. Strings are described in more detail in the next chapter, but for now the important thing to keep in mind is that an opening " character must eventually be followed by another " character and anything in between the two is included in the string. (The " character itself is not part of the string)
+
+The line that starts with // is known as a comment. Comments are ignored by the Go compiler and are there for your own sake (or whoever picks up the source code for your program). Go supports two different styles of comments: // comments in which all the text between the // and the end of the line is part of the comment and /* */ comments where everything between the *s is part of the comment. (And may include multiple lines)
+
+After this you see a function declaration:
+
+    func main() {
+        fmt.Println("Hello World")
+    }
+
+Functions are the building blocks of a Go program. They have inputs, outputs and a series of steps called statements which are executed in order. All functions start with the keyword func followed by the name of the function (main in this case), a list of zero or more “parameters” surrounded by parentheses, an optional return type and a “body” which is surrounded by curly braces. This function has no parameters, doesn't return anything and has only one statement. The name main is special because it's the function that gets called when you execute the program.
+
+The final piece of our program is this line:
+
+        fmt.Println("Hello World")
+
+This statement is made of three components. First we access another function inside of the fmt package called Println (that's the fmt.Println piece, Println means Print Line). Then we create a new string that contains Hello World and invoke (also known as call or execute) that function with the string as the first and only argument.
+
+At this point we've already seen a lot of new terminology and you may be a bit overwhelmed. Sometimes its helpful to deliberately read your program out loud. One reading of the program we just wrote might go like this:
+
+Create a new executable program, which references the fmt library and contains one function called main. That function takes no arguments, doesn't return anything and does the following: Access the Println function contained inside of the fmt package and invoke it using one argument – the string Hello World.
+
+The Println function does the real work in this program. You can find out more about it by typing the following in your terminal:
+
+    godoc fmt Println
+
+Among other things you should see this:
+
+Println formats using the default formats for its operands and writes to standard output. Spaces are always added between operands and a newline is appended. It returns the number of bytes written and any write error encountered.
+
+Go is a very well documented programming language but this documentation can be difficult to understand unless you are already familiar with programming languages. Nevertheless the godoc command is extremely useful and a good place to start whenever you have a question.
+
+Back to the function at hand, this documentation is telling you that the Println function will send whatever you give to it to standard output – a name for the output of the terminal you are working in. This function is what causes Hello World to be displayed.
+
+In the next chapter we will explore how Go stores and represents things like Hello World by learning about types.
+
+### Problems
+
+ * What is whitespace?
+ * What is a comment? What are the two ways of writing a comment?
+ * Our program began with package main. What would the files in the fmt package begin with?
+ * We used the Println function defined in the fmt package. If we wanted to use the Exit function from the os package what would we need to do?
+ * Modify the program we wrote so that instead of printing Hello World it prints Hello, my name is followed by your name.
+
+
 ## links
    * [目录](<preface.md>)
-   * 上一节: [Go 命令](<01.3.md>)
-   * 下一节: [hello-world](<02.0.md>)
+   * 上一节: [你的第一个程序](<02.0.md>)
+   * 下一节: [hello-world](<02.-1.md>)
