--- a/cn/01.1.md
+++ b/cn/01.1.md
@@ -10,13 +10,13 @@
 
 在 Windows 上浏览文件和文件夹可以使用 Windows 资源管理器 （可通过双击"我的电脑"或键入 win + e）:
 
-![windows](../img/1-mac-file.png)
+![windows](../img/1-windows-file.png)
 
 ###OSX
 
 在 OSX 上l浏览的文件和文件夹可以使用查找程序（可通过单击查找程序图标 — — 在左边栏中较低的显示图标）：
 
-![mac](../img/1-windows-file.png)
+![mac](../img/1-mac-file.png)
 
 
 ## links
